<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".view.Main_Page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentHome"
        android:layout_width="411dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:angle="45"
        android:orientation="vertical"
        android:type="linear"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="60dp">

        <Button
            android:id="@+id/removeUserButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:backgroundTint="#5D576B"
            android:text="@string/delete_user"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/logOut_Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeUsernameBtn"
            app:layout_constraintVertical_bias="0.471"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="381dp" />

        <TextView
            android:id="@+id/usernameTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fui_transparent"
            android:gravity="center"
            android:text="Username"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="40dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.132"
            tools:layout_conversion_absoluteHeight="51dp"
            tools:layout_conversion_absoluteWidth="411dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="68dp" />

        <EditText
            android:id="@+id/oldPasswordInputField"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/cornerround"
            android:ems="10"
            android:hint="@string/current_password"
            android:inputType="textVisiblePassword"
            android:paddingStart="8dp"
            android:textColorHint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.265"
            tools:layout_conversion_absoluteHeight="60dp"
            tools:layout_conversion_absoluteWidth="381dp" />

        <EditText
            android:id="@+id/newPasswordInputField"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/cornerround"
            android:ems="10"
            android:hint="@string/new_password"
            android:paddingStart="8dp"
            android:inputType="textVisiblePassword"
            android:textColorHint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.364"
            tools:layout_conversion_absoluteHeight="60dp"
            tools:layout_conversion_absoluteWidth="381dp" />

        <Button
            android:id="@+id/changePasswordBtn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:backgroundTint="#5D576B"
            android:text="@string/change_password"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="381dp" />

        <EditText
            android:id="@+id/newUsernameInputField"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/cornerround"
            android:hint="@string/new_username"
            android:inputType="text"
            android:textColorHint="#FFFFFF"
            android:paddingStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.557"
            tools:layout_conversion_absoluteHeight="60dp"
            tools:layout_conversion_absoluteWidth="381dp" />

        <Button
            android:id="@+id/changeUsernameBtn"
            android:text="@string/change_username"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:backgroundTint="#5D576B"
            app:layout_constraintBottom_toTopOf="@+id/logOut_Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newUsernameInputField"
            app:layout_constraintVertical_bias="0.133"
            tools:layout_conversion_absoluteHeight="43dp"
            tools:layout_conversion_absoluteWidth="381dp" />

        <Button
            android:id="@+id/logOut_Button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="44dp"
            android:backgroundTint="#5D576B"
            android:clickable="true"
            android:text="@string/logout"
            android:textColorLink="#C6C0C0"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="381dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>