...
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="profile_image">profile image</string>
    <string name="activity">Activity</string>
    <string name="group">Group</string>
    <string name="results">Results</string>
    <string name="logout">LogOut</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="timer">Timer</string>
    <string name="delete_user">Delete User</string>
    <string name="current_password">Current Password</string>
...
